--- a/home.html
+++ b/home.html
@@ -6,9 +6,9 @@
   <body>
     <h1>basically<br /><br /><br />i forgot?</h1>
     <p>
-      <img src="images.jpg" />
+      <img src="others/images.jpg" />
       <br /><br />
-      <a href="page2.html">don't click here</a>
+      <a href="others/page2.html">don't click here</a>
     </p>
   </body>
 </html>
