--- a/others/page2.html
+++ b/others/page2.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <title>my-apologies</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
   </head>
   <body>
     <p>
